...
            ),
            child: Column(
              children: [
                Gaps.v80,
                Text(
                  // S.of(context).signUpTitle("Tiktok", DateTime.now()),
                  "틱톡 회원가입",
                  style: Theme.of(context).textTheme.titleLarge,
                ),
                Gaps.v20,
                Opacity(
                  opacity: 0.7,
                  child: Text(
...
                ),
                Gaps.h5,
                GestureDetector(
                  onTap: () => _onLoginTap(context),
                  child: Text(
                    // S.of(context).logIn("male"), // selection
                    "Log in",
                    style: TextStyle(
                      color: Theme.of(context).primaryColor,
                      fontWeight: FontWeight.w600,
                    ),
                  ),
                )
...
