...
              cursorColor: Theme.of(context).primaryColor,
            ),
            Gaps.v28,
            FormButton(
              onTap: _onNextTap,
              disabled: _username.isEmpty,
              text: "Next",
            ),
          ],
        ),
      ),
    );
  }
...
